Fix: styling bug where items collapsed when all by themselves in restaurant grid

--- a/app/src/components/RestaurantGrid/index.module.scss
+++ b/app/src/components/RestaurantGrid/index.module.scss
@@ -6,4 +6,5 @@
   @media screen and (min-width: 1400px) {
     width: 1400px;
   }
+  width: 100%;
 }
